--- a/ODK.Web.Razor/Views/Shared/Footer/_SiteFooter.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Footer/_SiteFooter.cshtml
@@ -16,10 +16,13 @@
                 <a href="/">Home</a>
             </div>
             <div>
-                <a href="/Privacy">Privacy</a>
+                <a href="/privacy">Privacy</a>
             </div>
             <div>
-                <a href="/Contact">Contact</a>
+                <a href="/contact">Contact</a>
+            </div>
+            <div>
+                <a href="/pricing">Pricing</a>
             </div>
         </div>
     </section>
