--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentSettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentSettingsForm.cshtml
@@ -8,7 +8,7 @@
 
 <div class="form-group mb-3">
     @Html.LabelFor(x => x.Provider, new { @class = "form-label" })
-    @Html.DropDownListFor(x => x.Provider, providerOptions, new { @class = "form-control" })
+    @Html.DropDownListFor(x => x.Provider, providerOptions, new { @class = "form-select" })
 </div>
 
 <div class="form-group mb-3 required">
