--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -1,5 +1,6 @@
 ﻿@using ODK.Services.Authentication
 @using ODK.Web.Common.Extensions
+@using ODK.Web.Common.Routes
 
 @if (User.Authenticated())
 {
@@ -9,11 +10,19 @@
                 <i class="fas fa-user"></i>
             </div>
             <div class="dropdown-menu dropdown-menu-end">
-                <a class="dropdown-item dropdown-item--icon" href="/Account">
+                <a class="dropdown-item dropdown-item--icon" href="/account">
                     <i class="fa-regular fa-user"></i>
                     <span>My profile</span>
                 </a>
-                <a class="dropdown-item" href="/Groups">My groups</a>
+                <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Index()">
+                    <i class="fa-solid fa-users-rectangle"></i>
+                    <span>My groups</span>
+                </a>
+
+                <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Create()">
+                    <i class="fa-solid fa-plus"></i>
+                    <span>Create group</span>
+                </a>
 
                 <div class="dropdown-divider"></div>
 
@@ -30,14 +39,14 @@
                 {
                     <div class="dropdown-divider"></div>
 
-                    <a class="dropdown-item dropdown-item--icon" href="/SuperAdmin">
+                    <a class="dropdown-item dropdown-item--icon" href="/superadmin">
                         <i class="fa-solid fa-wrench"></i>
                         <span>Site admin</span>
                     </a>
                 }
 
                 <div class="dropdown-divider"></div>
-                <a class="dropdown-item dropdown-item--icon" href="/Account/Logout">
+                <a class="dropdown-item dropdown-item--icon" href="/account/logout">
                     <i class="fa-solid fa-arrow-right-from-bracket"></i>
                     <span>Sign Out</span>
                 </a>
@@ -48,7 +57,7 @@
 else
 {
     <div class="button-container">
-        <a class="btn btn-outline-primary anonymous-link" href="/Account/Login">Sign in</a>
-        <a class="btn btn-primary anonymous-link" href="/Account/Create">Sign up</a>
+        <a class="btn btn-outline-primary anonymous-link" href="/account/login">Sign in</a>
+        <a class="btn btn-primary anonymous-link" href="/account/create">Sign up</a>
     </div>
 }
