--- a/ODK.Web.Razor/Pages/Account/Activate.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Activate.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Activate"
+﻿@page "/account/activate"
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
 @model ODK.Web.Razor.Pages.Account.ActivateModel
