--- a/ODK.Web.Razor/Pages/Account/ChangeEmail.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangeEmail.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Email/Change"
+﻿@page "/account/email/change"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Members
