--- a/ODK.Web.Razor/Pages/Account/Delete.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Delete.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Delete"
+﻿@page "/account/delete"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Web.Common.Components
