--- a/ODK.Web.Razor/Pages/Account/Login.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Login.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Login"
+﻿@page "/account/login"
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Razor.Models.Login
 @model LoginModel
