--- a/ODK.Web.Razor/Pages/Account/Logout.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Logout.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Logout"
+﻿@page "/account/logout"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @model LogoutModel
