--- a/ODK.Web.Razor/Pages/Account/Pending.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Pending.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Pending"
+﻿@page "/account/pending"
 @using ODK.Web.Razor.Models.Components
 @using ODK.Web.Common.Components
 @model ODK.Web.Razor.Pages.Account.PendingModel
