--- a/ODK.Web.Razor/Pages/Account/Picture.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Picture.cshtml
@@ -1,4 +1,4 @@
-﻿@page "/Account/Picture"
+﻿@page "/account/picture"
 @attribute [Authorize]
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Members
