--- a/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
+++ b/ODK.Web.Razor/Pages/Shared/_Layout.cshtml
@@ -77,6 +77,7 @@
     <script src="~/lib/vanillajs-datepicker/dist/js/datepicker-full.js"></script>
     <script src="~/lib/aspnet-client-validation/dist/aspnet-validation.js"></script>
     <script src="~/js/site.js"></script>
+    <script src="~/js/odk.maps.js"></script>
     <script src="~/js/odk.forms.js"></script>
     <script src="~/js/odk.lists.js"></script>
     @await RenderSectionAsync("scripts", required: false)
