Re-send activation email

--- a/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ForgottenPassword.cshtml
@@ -11,10 +11,15 @@
 @await Html.PartialAsync("Components/_Body", new BodyViewModel
 {
     Title = "Forgotten password",
-    Content = await Html.PartialAsync("Account/_SiteForgottenPasswordContent"),
     Breadcrumbs = new[]
     {
         new MenuItem { Link = "/Account/Login", Text = "Login" },
         new MenuItem { Text = "Forgotten password" }
-    }
+    },
+    ContentFunc = 
+        @<div class="row">
+            <div class="col-lg-6">
+                @await Html.PartialAsync("Account/_ForgottenPasswordForm", new ForgottenPasswordFormViewModel())
+            </div>
+        </div>
 })
