--- a/ODK.Web.Razor/Pages/Account/ChangeEmail.cshtml
+++ b/ODK.Web.Razor/Pages/Account/ChangeEmail.cshtml
@@ -22,8 +22,15 @@
     {
         Active = "/Account/Email/Change",
         Content = 
-            @<div>
-                TODO
-            </div>
+            @<form method="post" action="/Account/Email/Change">
+                @Html.AntiForgeryToken()        
+    
+                @await Html.PartialAsync("Account/_ChangeEmailForm", new ChangeEmailFormViewModel
+                {
+                    Current = member.EmailAddress
+                })
+
+                <button type="submit" class="btn btn-primary">Update</button>
+            </form>
     })
 })
