--- a/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_ChapterJoinContent.cshtml
@@ -19,7 +19,10 @@
     
     @if (memberId == null)
     {
-        @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel());
+        @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel
+        {
+            ChapterName = Model.ChapterName
+        });
     }    
 
     @await Html.PartialAsync("Account/_ChapterProfileForm", Model.Profile)
