--- a/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentSettingsForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/SuperAdmin/_PaymentSettingsForm.cshtml
@@ -11,6 +11,7 @@
             Value = x.Id.ToString(),
             Text = x.Code
         })
+        .OrderBy(x => x.Text)
         .ToArray();
 }
 
