--- a/ODK.Web.Razor/Pages/Account/Create.cshtml
+++ b/ODK.Web.Razor/Pages/Account/Create.cshtml
@@ -1,4 +1,5 @@
 ﻿@page "/account/create"
+@using ODK.Core.Members
 @using ODK.Services.Users.ViewModels
 @using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
@@ -17,7 +18,10 @@
                 <form method="post" action="/account/create" enctype="multipart/form-data">
                     @Html.AntiForgeryToken()
                     @await Html.PartialAsync("Account/_PersonalDetailsForm", new PersonalDetailsFormViewModel())
-                    @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel())
+                    @await Html.PartialAsync("Account/_LocationForm", new LocationFormViewModel
+                    {
+                        TimeZoneId = Member.DefaultTimeZoneId
+                    })
                     <button type="submit" class="btn btn-primary">Sign up</button>
                 </form>
             </div>
