--- a/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Account/_LocationForm.cshtml
@@ -1,11 +1,18 @@
 ﻿@using ODK.Web.Razor.Models.Account
 @using ODK.Web.Razor.Models.Components
+@using ODK.Web.Razor.Razor
 @model LocationFormViewModel
 @{    
     var latLong = Model.Lat != null && Model.Long != null
         ? $"{Model.Lat},{Model.Long}"
         : null;
 }
+
+<div class="form-group mb-3 required">
+    @Html.LabelFor(x => x.TimeZoneId, new { @class = "form-label" })
+    @Html.OdkTimeZoneDropDownFor(x => x.TimeZoneId, new { @class = "form-select" })
+    @Html.ValidationMessageFor(x => x.TimeZoneId)
+</div>
 
 <div class="form-group mb-3 required" data-location-container>
     @Html.LabelFor(x => x.Name, new { @class = "form-label" })    
