--- a/ODK.Web.Razor/Views/Shared/Groups/_ChapterCreateForm.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Groups/_ChapterCreateForm.cshtml
@@ -29,6 +29,6 @@
 
 <div class="form-group mb-3 required">
     @Html.LabelFor(x => x.Location.TimeZoneId, new { @class = "form-label" })
-    @Html.OdkTimeZoneDropDownFor(x => x.Location.TimeZoneId, new { @class = "form-select" })
+    @Html.OdkTimeZoneDropDownFor(x => x.Location.TimeZoneId, new { @class = "form-select", data_searchable = "" })
     @Html.ValidationMessageFor(x => x.Location.TimeZoneId)
 </div>
