--- a/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Header/_SiteAccountMenu.cshtml
@@ -11,27 +11,37 @@
             </div>
             <div class="dropdown-menu dropdown-menu-end">
                 <a class="dropdown-item dropdown-item--icon" href="/account">
-                    <i class="fa-regular fa-user"></i>
+                    <span class="icon">
+                        <i class="fa-regular fa-user"></i>
+                    </span>                    
                     <span>My profile</span>
                 </a>
                 <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Index()">
-                    <i class="fa-solid fa-users-rectangle"></i>
+                    <span class="icon">
+                        <i class="fa-solid fa-users-rectangle"></i>
+                    </span>                    
                     <span>My groups</span>
                 </a>
 
                 <a class="dropdown-item dropdown-item--icon" href="@OdkRoutes2.MemberGroups.Create()">
-                    <i class="fa-solid fa-plus"></i>
+                    <span class="icon">
+                        <i class="fa-solid fa-plus"></i>
+                    </span>
                     <span>Create group</span>
                 </a>
 
                 <div class="dropdown-divider"></div>
 
                 <a class="dropdown-item dropdown-item--icon" href="#" data-theme-selector="dark">
-                    <i class="fa-regular fa-moon"></i>
+                    <span class="icon">
+                        <i class="fa-regular fa-moon"></i>
+                    </span>
                     <span>Dark mode</span>
                 </a>
                 <a class="dropdown-item dropdown-item--icon" href="#" data-theme-selector="light">
-                    <i class="fa-regular fa-sun"></i>
+                    <span class="icon">
+                        <i class="fa-regular fa-sun"></i>
+                    </span>
                     <span>Light mode</span>
                 </a>
 
@@ -40,14 +50,18 @@
                     <div class="dropdown-divider"></div>
 
                     <a class="dropdown-item dropdown-item--icon" href="/superadmin">
-                        <i class="fa-solid fa-wrench"></i>
+                        <span class="icon">
+                            <i class="fa-solid fa-wrench"></i>
+                        </span>
                         <span>Site admin</span>
                     </a>
                 }
 
                 <div class="dropdown-divider"></div>
                 <a class="dropdown-item dropdown-item--icon" href="/account/logout">
-                    <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    <span class="icon">
+                        <i class="fa-solid fa-arrow-right-from-bracket"></i>
+                    </span>
                     <span>Sign Out</span>
                 </a>
             </div>
