--- a/ODK.Web.Razor/Pages/Groups/Admin/Groups.cshtml
+++ b/ODK.Web.Razor/Pages/Groups/Admin/Groups.cshtml
@@ -1,6 +1,7 @@
 ﻿@page "/my/groups"
 @using Microsoft.AspNetCore.Authorization
 @using ODK.Services.Chapters
+@using ODK.Web.Common.Routes
 @using ODK.Web.Razor.Models.Chapters
 @using ODK.Web.Razor.Models.Components
 @attribute [Authorize]
@@ -18,27 +19,35 @@
     Title = "My groups",
     ContentFunc = 
         @<div>
-            @if (viewModel.Owned.Any())
-            {
-                <section>
+            <section class="section--admin">
+                <h5>Owner</h5>
+                
+                @if (viewModel.Owned.Count > 0)
+                {
                     @await Html.PartialAsync("Chapters/_ChapterTiles", new ChapterTilesViewModel
                     {
-                        Title = "Groups you own",
                         Chapters = viewModel.Owned.Select(x => new ChapterTileViewModel
                         {
                             Chapter = x,
                             IsOwner = true
                         }).ToArray()
                     })
-                </section>
-            }
+                }     
+                else
+                {
+                    <p>
+                        You haven't created any groups. 
+                        <a href="@OdkRoutes2.MemberGroups.Create()">Create a group</a>
+                    </p>
+                }
+            </section>
 
             @if (viewModel.Admin.Any())
             {
-                <section>
+                <section class="section--admin">
+                    <h5>Manager</h5>
                     @await Html.PartialAsync("Chapters/_ChapterTiles", new ChapterTilesViewModel
                     {
-                        Title = "Groups you manage",
                         Chapters = viewModel.Admin.Select(x => new ChapterTileViewModel
                         {
                             Chapter = x,
@@ -48,18 +57,25 @@
                 </section>
             }
 
-            @if (viewModel.Admin.Any())
-            {
-                <section>
+            <section class="section--admin">
+                <h5>Member</h5>
+                @if (viewModel.Member.Count > 0)
+                {
                     @await Html.PartialAsync("Chapters/_ChapterTiles", new ChapterTilesViewModel
                     {
-                        Title = "Groups you are a member of",
                         Chapters = viewModel.Member.Select(x => new ChapterTileViewModel
                         {
                             Chapter = x
                         }).ToArray()
                     })
-                </section>
-            }
+                }
+                else
+                {
+                    <p>
+                        You aren't a member of any groups.
+                        <a href="@OdkRoutes2.Groups.Index()">Find a group</a>
+                    </p>
+                }
+            </section>
         </div>    
 })
