--- a/ODK.Web.Razor/wwwroot/css/_forms.scss
+++ b/ODK.Web.Razor/wwwroot/css/_forms.scss
@@ -10,6 +10,11 @@
 	.form-label {
 		margin-right: 0.5rem;	
 	}
+
+	.form-select {
+		// turn off bootstrap's 100% width
+		width: auto;
+	}
 }
 
 .form-label {
