--- a/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
+++ b/ODK.Web.Razor/Views/Shared/Components/_InstagramPost.cshtml
@@ -5,6 +5,6 @@
 
 <div class="social-media-image-tile">
     <a href="@url" target="_blank">
-        <img src="/@Model.Chapter/Instagram/Images/@Model.InstagramPostId" />
+        <img src="/@Model.Chapter.Name/Instagram/Images/@Model.InstagramPostId" />
     </a>    
 </div>
